--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+PowerModelsDistribution = "d7431456-977f-11e9-2de3-97ff7677985e"
